[gd_scene load_steps=17 format=3 uid="uid://dt7ehaiia82nr"]

[ext_resource type="Script" uid="uid://oisxcn4h6tg2" path="res://scripts/enemy/enemy.gd" id="1_xu357"]
[ext_resource type="PackedScene" uid="uid://e13mgwqv1n3o" path="res://meshes/enemies/cg2_factory/bruiser/bruiser.blend" id="2_xvaul"]
[ext_resource type="Script" uid="uid://br0k5mvuhwc5u" path="res://scripts/enemy/states/masters/behavior_charge.gd" id="3_yfrtg"]
[ext_resource type="Script" uid="uid://dcobhyh2ydvef" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="4_g3hw5"]
[ext_resource type="Script" uid="uid://dj3y7t3gdn6bj" path="res://addons/finite_state_machine/scripts/state_machine_state.gd" id="5_6xesf"]
[ext_resource type="Script" uid="uid://dug1msh1cc714" path="res://scripts/enemy/states/idle_state.gd" id="6_a44eu"]
[ext_resource type="Script" uid="uid://t3yepo8pmdk" path="res://scripts/enemy/states/chase_state.gd" id="7_u6fmt"]
[ext_resource type="Script" uid="uid://4p7iwa71qh84" path="res://scripts/enemy/states/avoid_state.gd" id="8_17thy"]
[ext_resource type="PackedScene" uid="uid://derh5gmq2d8f8" path="res://scene/utilities/gore/gore_manager.tscn" id="9_356rx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gjrny"]
radius = 0.600856

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_btmf1"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y88sg"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6amg7"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_d8wwa"]
blend_point_0/node = SubResource("AnimationNodeAnimation_btmf1")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_y88sg")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_6amg7")
blend_point_2/pos = 0.0
min_space = 0.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_6hryh"]
nodes/leg/node = SubResource("AnimationNodeBlendSpace1D_d8wwa")
nodes/leg/position = Vector2(-340, 60)
nodes/output/position = Vector2(380, 120)
node_connections = [&"output", 0, &"leg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4qbp4"]
size = Vector3(0.769531, 1.2876, 0.338318)

[node name="bruiser" type="CharacterBody3D" node_paths=PackedStringArray("navigation_agent", "anim", "gore_manager", "mesh_instances") groups=["Enemy"]]
script = ExtResource("1_xu357")
hp = 35
elite = true
navigation_agent = NodePath("behavior_master/NavigationAgent3D")
anim = NodePath("mesh/AnimationPlayer")
gore_manager = NodePath("gore_manager")
mesh_instances = [NodePath("mesh/metarig/Skeleton3D/Character"), NodePath("mesh/metarig/Skeleton3D/Character_001"), NodePath("mesh/metarig/Skeleton3D/Character_002")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_gjrny")

[node name="mesh" parent="." instance=ExtResource("2_xvaul")]
transform = Transform3D(-1.5, 0, -2.26494e-07, 0, 1.5, 0, 2.26494e-07, 0, -1.5, 0, -1, 0)

[node name="Skeleton3D" parent="mesh/metarig" index="0"]
bones/0/position = Vector3(2.41595e-09, 1.06891, -0.00681275)
bones/0/rotation = Quaternion(0, 0.422618, 0, 0.906308)
bones/1/rotation = Quaternion(0.0356996, -0.66067, 0.0404582, 0.748735)
bones/2/rotation = Quaternion(0.0161974, -0.000707335, 0.0436137, 0.998917)
bones/3/rotation = Quaternion(-0.572424, -0.394201, -0.408169, 0.59189)
bones/4/rotation = Quaternion(-0.500132, 0.658528, -0.300361, 0.475386)
bones/5/rotation = Quaternion(0.461694, 0.02483, -0.0154065, 0.886558)
bones/7/rotation = Quaternion(-0.471087, 0.496281, 0.607301, 0.403693)
bones/8/rotation = Quaternion(-0.242603, -0.601147, 0.355243, 0.673475)
bones/9/rotation = Quaternion(0.215991, 1.71037e-05, 0.120111, 0.96898)
bones/11/rotation = Quaternion(0.161293, 0.338752, -0.0471707, 0.925746)
bones/13/position = Vector3(0.00558726, 0.0620999, 0.098)
bones/13/rotation = Quaternion(0.880923, 0.0537776, 0.458695, -0.103347)
bones/14/rotation = Quaternion(0.069602, -1.48451e-08, 4.69874e-09, 0.997575)
bones/15/rotation = Quaternion(-0.768802, 8.64768e-07, -6.31344e-07, 0.639487)
bones/16/position = Vector3(0.00558725, 0.0620999, -0.098)
bones/16/rotation = Quaternion(0.817042, -0.13816, 0.519275, 0.209063)
bones/17/rotation = Quaternion(0.334015, -1.21007e-08, 5.57475e-08, 0.942568)
bones/18/rotation = Quaternion(-0.607461, 7.13616e-07, -8.02938e-07, 0.79435)
bones/20/rotation = Quaternion(-0.0243409, 0.751105, 0.655919, -0.0708453)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../mesh")
tree_root = SubResource("AnimationNodeBlendTree_6hryh")
anim_player = NodePath("../mesh/AnimationPlayer")
parameters/leg/blend_position = 1.0

[node name="Looker" type="Node3D" parent="."]

[node name="aim_ray" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.475871)
target_position = Vector3(0, 0, -100)
debug_shape_custom_color = Color(1, 0.427451, 0.635294, 1)
debug_shape_thickness = 5

[node name="behavior_master" type="Node3D" parent="." node_paths=PackedStringArray("charge_ray", "cooldown_timer", "anim_plr", "master", "state_machine", "aim_node", "attack_timer", "look_ray", "dead_state", "idle_state", "chase_state", "avoid_state", "anim")]
script = ExtResource("3_yfrtg")
charge_speed = 12.0
detection_range = 10.0
charge_duration = 1.0
charge_ray = NodePath("../aim_ray")
cooldown_timer = NodePath("cooldown_timer")
anim_plr = NodePath("../mesh/AnimationPlayer")
master = NodePath("..")
state_machine = NodePath("FiniteStateMachine")
speed = 5.0
dist_to_chase = 2.0
dist_to_avoid = 0.0
aim_speed = 10.0
aim_node = NodePath("aimnode")
attack_timer = NodePath("attack_timer")
attack_speed = 10.0
look_ray = NodePath("../aim_ray")
dead_state = NodePath("FiniteStateMachine/Dead")
idle_state = NodePath("FiniteStateMachine/Idle")
chase_state = NodePath("FiniteStateMachine/Chase")
avoid_state = NodePath("FiniteStateMachine/Avoid")
anim = NodePath("../AnimationTree")

[node name="FiniteStateMachine" type="Node" parent="behavior_master"]
script = ExtResource("4_g3hw5")

[node name="Dead" type="Node" parent="behavior_master/FiniteStateMachine"]
script = ExtResource("5_6xesf")

[node name="Idle" type="Node" parent="behavior_master/FiniteStateMachine" node_paths=PackedStringArray("behavior")]
script = ExtResource("6_a44eu")
behavior = NodePath("../..")

[node name="Chase" type="Node" parent="behavior_master/FiniteStateMachine" node_paths=PackedStringArray("behavior")]
script = ExtResource("7_u6fmt")
behavior = NodePath("../..")

[node name="Avoid" type="Node" parent="behavior_master/FiniteStateMachine" node_paths=PackedStringArray("behavior")]
script = ExtResource("8_17thy")
behavior = NodePath("../..")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="behavior_master"]
navigation_layers = 255
avoidance_enabled = true
radius = 1.0
debug_enabled = true

[node name="attack_timer" type="Timer" parent="behavior_master"]
wait_time = 5.0

[node name="aimnode" type="Node3D" parent="behavior_master"]
top_level = true

[node name="charge_hitbox" type="Area3D" parent="behavior_master"]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="behavior_master/charge_hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.143799, -0.529738)
shape = SubResource("BoxShape3D_4qbp4")

[node name="cooldown_timer" type="Timer" parent="behavior_master"]
wait_time = 0.5

[node name="gore_manager" parent="." instance=ExtResource("9_356rx")]

[connection signal="animation_finished" from="mesh/AnimationPlayer" to="behavior_master" method="_on_animation_player_animation_finished"]
[connection signal="velocity_computed" from="behavior_master/NavigationAgent3D" to="behavior_master" method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="behavior_master/attack_timer" to="behavior_master" method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="behavior_master/charge_hitbox" to="behavior_master" method="_on_charge_hitbox_body_entered"]
[connection signal="timeout" from="behavior_master/cooldown_timer" to="behavior_master" method="_on_cooldown_timer_timeout"]

[editable path="mesh"]
